--- a/image.ui
+++ b/image.ui
@@ -19,23 +19,6 @@ background-color: rgb(85, 85, 127);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
-     <widget class="QSpinBox" name="ColorationBox">
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>4</number>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QPushButton" name="colorationButton">
-      <property name="text">
-       <string>apply coloration</string>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="0">
      <widget class="QGroupBox" name="horizontalGroupBox">
       <property name="maximumSize">
@@ -73,6 +56,30 @@ color: rgb(0, 0, 0);</string>
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="TestsButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">
+background-color: rgb(0, 85, 0);
+background-color: rgb(0, 0, 255);
+color: rgb(0, 0, 0);</string>
+         </property>
+         <property name="text">
+          <string>Tests</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="midline">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -97,32 +104,53 @@ color: rgb(0, 0, 0);
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QPushButton" name="TestsButton">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">
-background-color: rgb(0, 85, 0);
-background-color: rgb(0, 0, 255);
-color: rgb(0, 0, 0);</string>
-         </property>
-         <property name="text">
-          <string>Tests</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
+    </item>
+    <item row="10" column="0">
+     <widget class="QSpinBox" name="TemplateBox">
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>8</number>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="0">
+     <widget class="QPushButton" name="colorationButton">
+      <property name="text">
+       <string>apply coloration</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0">
+     <widget class="QSpinBox" name="ColorationBox">
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>4</number>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QPushButton" name="increase_size">
+        <property name="text">
+         <string>Template Size Increase</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="Decrease_size">
+        <property name="text">
+         <string>Template size Decrease</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -138,17 +166,7 @@ color: rgb(0, 0, 0);</string>
       </item>
      </layout>
     </item>
-    <item row="5" column="0">
-     <widget class="QSpinBox" name="TemplateBox">
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>8</number>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0">
+    <item row="11" column="0">
      <widget class="QPushButton" name="TemplateButton">
       <property name="text">
        <string>apply Template</string>
